# browser-tools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  SKILL.md  go.mod  main.go  pyproject.toml
.github/workflows/: release.yml
browser/: config.go  proc_unix.go  proc_windows.go  session.go
cmd/: cft.go  check.go  clear.go  console.go  cookie.go  domstorage.go  download.go  element.go  evaluatejs.go  extension.go  fill.go  html.go  intercept.go  key.go  mouse.go  navigate.go  network.go  pdf.go  pick.go  resize.go  screenshot.go  scroll.go  select.go  start.go  tab.go  update.go  upload.go  version.go  wait.go
scripts/: browser_utils.py  check.py  clear-cookies.py  clear-storage.py  click-element.py  console.py  cookies.py  debug-pages.py  download.py  evaluate.py  fill.py  get-html.py  mouse.py  navigate.py  network.py  pick.py  press-key.py  screenshot.py  select-dropdown.py  start.py  storage.py  tabs.py  upload.py
